Tue Oct 19 14:56:27 BST 2004 (njh)
----------------------------------
  * libclamav/message.c:	Some base64 encoders encode extra NUL bytes
			at the end - ensure that they aren't added when
			decoding

Tue Oct 19 02:53:46 CEST 2004 (tk)
----------------------------------
  * libclamav/matcher.c: fix signature target type validation for data files
			 of unknown type

Sun Oct 17 18:33:10 CEST 2004 (tk)
----------------------------------
  V 0.80

Sun Oct 17 18:19:24 CEST 2004 (tk)
----------------------------------
  * docs: update (thanks to Tomasz Papszun for corrections)

Sun Oct 17 16:50:37 CEST 2004 (acab)
------------------------------------
  * libclamav/pe.c: fixed a bug preventing one-section fsg1.33 files to be
                    unpacked (problem reported by Christoph Cordes)

Sun Oct 17 16:10:45 CEST 2004 (tk)
----------------------------------
  * libclamav/others: set flevel to 3

Sun Oct 17 15:31:59 CEST 2004 (tk)
----------------------------------
  * libclamav/chmunpack.c: better handling of broken files (problem reported
			   by Tomasz Papszun)

Sun Oct 17 10:30:36 BST 2004 (njh)
----------------------------------
  * libclamav:		Added advice to report mails that can't be scanned

Sun Oct 17 02:42:10 CEST 2004 (tk)
----------------------------------
  * libclamav, freshclam: cosmetic fixes

Sun Oct 17 01:28:48 CEST 2004 (tk)
----------------------------------
  * libclamav: count unpacked data scanned by cl_scanbuff()

Sat Oct 16 20:11:15 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Rudimentary handling of BeMail (BeOS) messages.
				Documentation of the format would be appreciated

Sat Oct 16 18:24:33 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Handle headers such as boundary="=.J:gysAG)N(3_zv"
				where the colon must not be treated as a
				token separator, reported by Christoph

Sat Oct 16 17:10:06 BST 2004 (njh)
----------------------------------